# shielded-contracts

./: CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  wave_issue.md
.github/workflows/: ci.yml
contracts/commitment-pool/: Cargo.toml
contracts/commitment-pool/src/: errors.rs  events.rs  lib.rs  merkle.rs  nullifier.rs
contracts/commitment-pool/test_snapshots/test/: test_deposit_and_get_root.1.json  test_deposit_when_paused.1.json  test_nullifier_tracking.1.json  test_pause_unpause.1.json  test_withdraw_when_paused.1.json
contracts/compliance-registry/: Cargo.toml
contracts/compliance-registry/src/: errors.rs  lib.rs
contracts/compliance-registry/test_snapshots/test/: test_register_and_retrieve_viewing_key.1.json
contracts/groth16-verifier/: Cargo.toml
contracts/groth16-verifier/src/: errors.rs  lib.rs
contracts/groth16-verifier/test_snapshots/test/: test_initialize_and_register_vk.1.json
contracts/proxy-blend/: Cargo.toml
contracts/proxy-blend/src/: errors.rs  lib.rs
tests/integration/: full_cycle_test.rs
