[workspace]
resolver = "2"
members = [
    "contracts/commitment-pool",
    "contracts/groth16-verifier",
    "contracts/compliance-registry",
    "contracts/proxy-blend",
]

[workspace.dependencies]
soroban-sdk = "22.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
