[package]
name = "compliance-registry"
version = "0.1.0"
edition = "2021"
description = "Encrypted viewing key registry for regulatory compliance on Soroban"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
