[package]
name = "groth16-verifier"
version = "0.1.0"
edition = "2021"
description = "On-chain Groth16 proof verifier using BN254 for Soroban"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
