[package]
name = "proxy-blend"
version = "0.1.0"
edition = "2021"
description = "Shielded proxy wrapping Blend lending protocol interface on Soroban"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
